--- a/values.yaml
+++ b/values.yaml
@@ -12,7 +12,7 @@ image:
   repository: ghcr.io/ldest/sre-course/api
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0e6cd26"
+  tag: "c4f3862"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -28,20 +28,25 @@ serviceAccount:
   name: ""
 
 # https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/#configure-probes
-#livenessProbe:
-#  httpGet:
-#    path: /
-#    port: http
-#readinessProbe:
-#  httpGet:
-#    path: /
-#    port: http
+livenessProbe:
+  httpGet:
+    path: /healthz/live
+    port: http
+  initialDelaySeconds: 10
+  periodSeconds: 20
+readinessProbe:
+  httpGet:
+    path: /healthz/ready
+    port: http
+  initialDelaySeconds: 10
+  periodSeconds: 20
+
 
 strategy:
   type: RollingUpdate
   rollingUpdate:
     maxSurge: 1
-    maxUnavailable: 0 
+    maxUnavailable: 0
 
 podAnnotations: {}
 
