--- a/values.yaml
+++ b/values.yaml
@@ -12,7 +12,7 @@ image:
   repository: ghcr.io/ldest/sre-course/api
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "c4f3862"
+  tag: "f0135e1"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -31,16 +31,18 @@ serviceAccount:
 livenessProbe:
   httpGet:
     path: /healthz/live
-    port: http
-  initialDelaySeconds: 10
-  periodSeconds: 20
+    port: 80
+  initialDelaySeconds: 5
+  periodSeconds: 10
+#  timeoutSeconds: 30
+#  failureThreshold: 10
 readinessProbe:
   httpGet:
     path: /healthz/ready
-    port: http
-  initialDelaySeconds: 10
-  periodSeconds: 20
-
+    port: 80
+  initialDelaySeconds: 5
+  periodSeconds: 5
+#  timeoutSeconds: 2
 
 strategy:
   type: RollingUpdate
